[gd_scene load_steps=28 format=2]

[ext_resource path="res://5.png" type="Texture" id=1]
[ext_resource path="res://Line1.gd" type="Script" id=2]
[ext_resource path="res://main.gd" type="Script" id=3]
[ext_resource path="res://check/4b59511d-d9ef-4027-85f7-364afc845a10-4.png" type="Texture" id=4]
[ext_resource path="res://check/4b59511d-d9ef-4027-85f7-364afc845a10-2.png" type="Texture" id=5]
[ext_resource path="res://check/4b59511d-d9ef-4027-85f7-364afc845a10-5.png" type="Texture" id=6]
[ext_resource path="res://check/4b59511d-d9ef-4027-85f7-364afc845a10-7.png" type="Texture" id=7]
[ext_resource path="res://check/4b59511d-d9ef-4027-85f7-364afc845a10-8.png" type="Texture" id=8]
[ext_resource path="res://check/4b59511d-d9ef-4027-85f7-364afc845a10-9.png" type="Texture" id=9]
[ext_resource path="res://check/4b59511d-d9ef-4027-85f7-364afc845a10-3.png" type="Texture" id=10]
[ext_resource path="res://check/4b59511d-d9ef-4027-85f7-364afc845a10-10.png" type="Texture" id=11]
[ext_resource path="res://check/4b59511d-d9ef-4027-85f7-364afc845a10-0.png" type="Texture" id=12]
[ext_resource path="res://check/4b59511d-d9ef-4027-85f7-364afc845a10-6.png" type="Texture" id=13]
[ext_resource path="res://check/4b59511d-d9ef-4027-85f7-364afc845a10-11.png" type="Texture" id=14]
[ext_resource path="res://check/4b59511d-d9ef-4027-85f7-364afc845a10-1.png" type="Texture" id=15]
[ext_resource path="res://Line2.gd" type="Script" id=16]
[ext_resource path="res://Line3.gd" type="Script" id=17]
[ext_resource path="res://Line4.gd" type="Script" id=18]
[ext_resource path="res://Line5.gd" type="Script" id=19]
[ext_resource path="res://finger.png" type="Texture" id=20]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 15 ), ExtResource( 5 ), ExtResource( 10 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 13 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 156.521, 20.5405 )

[sub_resource type="CircleShape2D" id=5]

[sub_resource type="CircleShape2D" id=4]

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("mouse:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 304, 670 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("mouse:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ColorRect:rect_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 40 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ColorRect:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "tutam"
length = 3.45
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("mouse:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1.6, 1.65, 1.85, 2.1, 2.9, 3 ),
"transitions": PoolRealArray( 1, 1, 0.01, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 304, 670 ), Vector2( 860, 670 ), Vector2( 860, 670 ), Vector2( 304, 670 ), Vector2( 304, 670 ), Vector2( 304, 670 ), Vector2( 860, 670 ), Vector2( 860, 670 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("mouse:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.15, 1.6, 1.85, 1.95, 3, 3.45 ),
"transitions": PoolRealArray( 1.03526, 1.03526, 1, 1, 1.03526, 1.03526, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ColorRect:rect_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.8, 1.6, 1.85, 2.1, 2.9, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 40 ), Vector2( 40, 40 ), Vector2( 40, 40 ), Vector2( 0, 40 ), Vector2( 0, 40 ), Vector2( 40, 40 ), Vector2( 40, 40 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ColorRect:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.15, 1.6, 1.85, 1.95, 3, 3.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 0.545098 ), Color( 1, 0, 0, 0.545098 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 0, 0, 0.545098 ), Color( 1, 0, 0, 0.545098 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 827, 1169 )
z_index = -1
texture = ExtResource( 1 )

[node name="Line1" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="1" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 233, 618 )
scale = Vector2( 1.41521, 1.41521 )
frames = SubResource( 3 )

[node name="1S" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="1S"]
position = Vector2( 236, 623 )
scale = Vector2( 10, 10 )
shape = SubResource( 1 )

[node name="1E" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="1E"]
position = Vector2( 1429, 623 )
scale = Vector2( 10, 10 )
shape = SubResource( 1 )

[node name="1M" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="1M"]
position = Vector2( 833.5, 624 )
scale = Vector2( 4.43711, 4.91711 )
shape = SubResource( 2 )

[node name="Line2" type="Node2D" parent="."]
script = ExtResource( 16 )

[node name="2" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 233, 853 )
scale = Vector2( 1.41521, 1.41521 )
frames = SubResource( 3 )

[node name="2S" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="2S"]
position = Vector2( 236, 854 )
scale = Vector2( 10, 10 )
shape = SubResource( 1 )

[node name="2E" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="2E"]
position = Vector2( 1429, 854 )
scale = Vector2( 10, 10 )
shape = SubResource( 1 )

[node name="2M" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="2M"]
scale = Vector2( 1.00912, 1 )
polygon = PoolVector2Array( 153.599, 805, 190.265, 762, 257.65, 756, 471.698, 790, 746.194, 711, 949.341, 718, 1198.07, 791, 1394.28, 754, 1470.59, 771, 1514.19, 828, 1504.28, 904, 1427.97, 960, 1193.12, 1013, 1110.87, 1008, 952.314, 957, 822.498, 937, 551.965, 1013, 424.131, 1023, 193.237, 955, 128.825, 865 )

[node name="Line3" type="Node2D" parent="."]
script = ExtResource( 17 )

[node name="3" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 233, 1229 )
scale = Vector2( 1.41521, 1.41521 )
frames = SubResource( 3 )

[node name="3S" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="3S"]
position = Vector2( 236, 1230 )
scale = Vector2( 10, 10 )
shape = SubResource( 1 )

[node name="3E" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="3E"]
position = Vector2( 1429, 1230 )
scale = Vector2( 10, 10 )
shape = SubResource( 1 )

[node name="3M" type="Area2D" parent="."]

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="3M"]
polygon = PoolVector2Array( 141, 1219, 171, 1147, 243, 1127, 283, 1143, 397, 985, 475, 983, 567, 1083, 675, 969, 735, 967, 835, 1083, 929, 961, 1015, 965, 1103, 1087, 1199, 967, 1279, 967, 1415, 1131, 1487, 1143, 1529, 1213, 1517, 1271, 1469, 1329, 1399, 1327, 1270, 1330, 1244, 1284, 1219, 1329, 1007, 1313, 963, 1255, 923, 1331, 733, 1319, 697, 1269, 665, 1323, 477, 1327, 431, 1273, 365, 1339, 219, 1343, 137, 1267 )

[node name="Line4" type="Node2D" parent="."]
script = ExtResource( 18 )

[node name="4" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 233, 1568 )
scale = Vector2( 1.41521, 1.41521 )
frames = SubResource( 3 )

[node name="4S" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="4S"]
position = Vector2( 236, 1568 )
scale = Vector2( 10, 10 )
shape = SubResource( 1 )

[node name="4E" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="4E"]
position = Vector2( 1420, 1576 )
scale = Vector2( 10, 10 )
shape = SubResource( 1 )

[node name="4M" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="4M"]
polygon = PoolVector2Array( 154, 1507, 237, 1367, 393, 1308, 541, 1370, 640, 1296, 785, 1301, 822, 1367, 923, 1291, 1091, 1311, 1158, 1360, 1283, 1308, 1463, 1376, 1515, 1501, 1519, 1588, 1483, 1657, 1379, 1669, 1318, 1610, 1293, 1568, 1244, 1581, 1216, 1625, 1194, 1681, 1056, 1687, 994, 1573, 955, 1586, 911, 1687, 780, 1697, 716, 1607, 691, 1541, 663, 1556, 652, 1691, 511, 1726, 378, 1666, 385, 1607, 353, 1610, 314, 1652, 256, 1662, 173, 1659, 129, 1581 )

[node name="check4-1" type="Area2D" parent="."]

[node name="1" type="CollisionShape2D" parent="check4-1"]
position = Vector2( 526, 1594 )
scale = Vector2( 10.2339, 9.05357 )
shape = SubResource( 5 )

[node name="check4-2" type="Area2D" parent="."]

[node name="2" type="CollisionShape2D" parent="check4-2"]
position = Vector2( 827, 1582 )
scale = Vector2( 10.8355, 9.26588 )
shape = SubResource( 5 )

[node name="check4-3" type="Area2D" parent="."]

[node name="3" type="CollisionShape2D" parent="check4-3"]
position = Vector2( 1120, 1585 )
scale = Vector2( 10.2514, 9.71162 )
shape = SubResource( 5 )

[node name="Line5" type="Node2D" parent="."]
script = ExtResource( 19 )

[node name="5" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 233, 1954 )
scale = Vector2( 1.41521, 1.41521 )
frames = SubResource( 3 )

[node name="5S" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="5S"]
position = Vector2( 226, 1959 )
scale = Vector2( 10, 10 )
shape = SubResource( 1 )

[node name="5E" type="Area2D" parent="."]
position = Vector2( -2, 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="5E"]
position = Vector2( 1419, 1959 )
scale = Vector2( 10, 10 )
shape = SubResource( 1 )

[node name="5M" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="5M"]
position = Vector2( -7, -535 )
scale = Vector2( 1, 1.3 )
polygon = PoolVector2Array( 132, 1909.23, 220, 1776, 362, 1686, 524, 1688, 643, 1733.85, 769, 1693.08, 888, 1694, 1014, 1726.15, 1114, 1692, 1250, 1690, 1394, 1756, 1519, 1886.92, 1526, 1938.46, 1496, 1976.15, 1426, 1996.15, 1355, 1980.77, 1282, 1889.23, 1203, 1860, 1122, 1885.38, 1026, 1918, 900, 1857.69, 814, 1853.85, 646, 1916, 532, 1866, 440, 1852, 372, 1892, 324, 1946.92, 277, 1987.69, 219, 2000, 162, 1983.08 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="5M"]
polygon = PoolVector2Array( 562, 1812, 509, 1936, 524, 2038, 589, 2099, 667, 2109, 743, 2075, 779, 1977, 729, 1812, 645, 1810, 647, 1983, 644, 1982, 638, 1812 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="5M"]
position = Vector2( 359, 0 )
polygon = PoolVector2Array( 562, 1812, 509, 1936, 543, 2054, 589, 2099, 667, 2109, 734, 2081, 783, 1948, 729, 1812, 645, 1810, 651, 1994, 647, 1994, 638, 1812 )

[node name="check5-1" type="Area2D" parent="."]

[node name="1" type="CollisionShape2D" parent="check5-1"]
position = Vector2( 644, 2050 )
scale = Vector2( 6.94135, 6.98591 )
shape = SubResource( 4 )

[node name="check5-2" type="Area2D" parent="."]

[node name="2" type="CollisionShape2D" parent="check5-2"]
position = Vector2( 1005, 2055 )
scale = Vector2( 6.37436, 6.00485 )
shape = SubResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 222.0
margin_top = 609.0
margin_right = 222.0
margin_bottom = 649.0
rect_scale = Vector2( 14.7271, 0.701673 )
color = Color( 1, 0, 0, 0 )

[node name="mouse" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 304, 670 )
rotation = 0.0961722
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 20 )

[node name="AP" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/tutam = SubResource( 7 )

[connection signal="mouse_entered" from="1S" to="." method="_on_1S_mouse_entered"]
[connection signal="mouse_exited" from="1S" to="." method="_on_1S_mouse_exited"]
[connection signal="mouse_entered" from="1E" to="." method="_on_1E_mouse_entered"]
[connection signal="mouse_exited" from="1E" to="." method="_on_1E_mouse_exited"]
[connection signal="mouse_entered" from="1M" to="." method="_on_1M_mouse_entered"]
[connection signal="mouse_exited" from="1M" to="." method="_on_1M_mouse_exited"]
[connection signal="mouse_entered" from="2S" to="." method="_on_2S_mouse_entered"]
[connection signal="mouse_exited" from="2S" to="." method="_on_2S_mouse_exited"]
[connection signal="mouse_entered" from="2E" to="." method="_on_2E_mouse_entered"]
[connection signal="mouse_exited" from="2E" to="." method="_on_2E_mouse_exited"]
[connection signal="mouse_entered" from="2M" to="." method="_on_2M_mouse_entered"]
[connection signal="mouse_exited" from="2M" to="." method="_on_2M_mouse_exited"]
[connection signal="mouse_entered" from="3S" to="." method="_on_3S_mouse_entered"]
[connection signal="mouse_exited" from="3S" to="." method="_on_3S_mouse_exited"]
[connection signal="mouse_entered" from="3E" to="." method="_on_3E_mouse_entered"]
[connection signal="mouse_exited" from="3E" to="." method="_on_3E_mouse_exited"]
[connection signal="mouse_entered" from="3M" to="." method="_on_3M_mouse_entered"]
[connection signal="mouse_exited" from="3M" to="." method="_on_3M_mouse_exited"]
[connection signal="mouse_entered" from="4S" to="." method="_on_4S_mouse_entered"]
[connection signal="mouse_exited" from="4S" to="." method="_on_4S_mouse_exited"]
[connection signal="mouse_entered" from="4E" to="." method="_on_4E_mouse_entered"]
[connection signal="mouse_exited" from="4E" to="." method="_on_4E_mouse_exited"]
[connection signal="mouse_entered" from="4M" to="." method="_on_4M_mouse_entered"]
[connection signal="mouse_exited" from="4M" to="." method="_on_4M_mouse_exited"]
[connection signal="mouse_entered" from="check4-1" to="." method="_on_check41_mouse_entered"]
[connection signal="mouse_exited" from="check4-1" to="." method="_on_check41_mouse_exited"]
[connection signal="mouse_entered" from="check4-2" to="." method="_on_check42_mouse_entered"]
[connection signal="mouse_exited" from="check4-2" to="." method="_on_check42_mouse_exited"]
[connection signal="mouse_entered" from="check4-3" to="." method="_on_check43_mouse_entered"]
[connection signal="mouse_exited" from="check4-3" to="." method="_on_check43_mouse_exited"]
[connection signal="mouse_entered" from="5S" to="." method="_on_5S_mouse_entered"]
[connection signal="mouse_exited" from="5S" to="." method="_on_5S_mouse_exited"]
[connection signal="mouse_entered" from="5E" to="." method="_on_5E_mouse_entered"]
[connection signal="mouse_exited" from="5E" to="." method="_on_5E_mouse_exited"]
[connection signal="mouse_entered" from="5M" to="." method="_on_5M_mouse_entered"]
[connection signal="mouse_exited" from="5M" to="." method="_on_5M_mouse_exited"]
[connection signal="mouse_entered" from="check5-1" to="." method="_on_check51_mouse_entered"]
[connection signal="mouse_exited" from="check5-1" to="." method="_on_check51_mouse_exited"]
[connection signal="mouse_entered" from="check5-2" to="." method="_on_check52_mouse_entered"]
[connection signal="mouse_exited" from="check5-2" to="." method="_on_check52_mouse_exited"]
